# AVM

./: .~lock.Software Architecture.docx#  AVMException.cpp  AVMWarnException.cpp  CMakeLists.txt  README.md  Software Architecture.docx  Template-Software-Qualification-Specifications-Acceptance-V2.docx  Template-Software-Qualification-Specifications-V2.docx  eOperandType.cpp  includer.cpp  main.cpp
CPU/: BoxOperand.cpp  Controller.cpp  Controller.h  Converter.cpp  Factory.cpp  IOperand.cpp  TypedOperand.cpp  ValueConverter.cpp
CPU/Headers/: BFactory.h  BoxOperand.h  Controller.h  Converter.h  Factory.h  IOperand.h  TypedOperand.h
Headers/: Includers.h  includer.h
IO/: Parser.cpp  Periferal.cpp
IO/Headers/: Parser.h  Periferal.h
RAM/: MyRegister.cpp  MyStack.cpp
RAM/Headers/: MyRegister.h  MyStack.h
